fix filter, fix product spacing

--- a/styles/base.less
+++ b/styles/base.less
@@ -116,6 +116,7 @@ main {padding: 2vw 6vw;}
     text-transform: uppercase;
     color: #fff;
     font-size: 36px;
+    line-height: 40px;
     background: #b1a9f3;
     box-shadow: inset -2px -2px 0px #6A61C9, inset 2px 2px 0px #FFFFFF;
     height: 60px;
@@ -628,20 +629,26 @@ footer { width: 100vw; padding: 50px; box-sizing: border-box;}
     .footer-logo {height: 150px; width: auto;}
     .email-mailchimp-right {width: 100%; text-align: center;}
     article {  padding-bottom: 35px;}
-    
+    #productSummary {
+      background: rgba(255, 255, 255, .5);
+      width: 88%;
+      margin: 5vw;
+      padding: 25px;
+  }
 }
 
 @media (max-width: 450px){
   article {padding-bottom: 65px;}
   .meta a {padding-left: 0px; }
-  #productList .product {width: 100%; }
+  #productList .product {width: 90%; margin-left: 5%; }
   .blog-list-nav-button .comments {display: none;}
   .blog-list-nav-icons {overflow: scroll;}
   .blog-list-nav-button a {width: 90%; text-align: center;}
   .field-list{margin: 0 2vw;}
   .eye_sticker {width: 75px;}
-  .spotify-wrapper {margin: 0 5vw;}
-  .centered-wrapper {margin: 0 5vw!important;}
+  .spotify-wrapper {margin: 3vh 2vw;}
+  .centered-wrapper {margin: 3vh 2vw!important;}
+  .productSummary {width: 100%; margin: 2vw;}
 
 }
 
